// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties OrgChart/Card Component Only required options 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active  clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component at position x=150, y=220 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": 150,
        "position": "absolute",
        "top": 220,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component blurred 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card  card-blur clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component blurred and active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active card-blur clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component blurred and dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card  card-blur being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component blurred, active and dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active card-blur being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component dragging and active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active  being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component with a card click url 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="http://example.com"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Component with click handlers 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card Only required options 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active  clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card at position x=150, y=220 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": 150,
        "position": "absolute",
        "top": 220,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card blurred 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card  card-blur clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card blurred and active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active card-blur clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card blurred and dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card  card-blur being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card blurred, active and dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active card-blur being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card dragging 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card dragging and active 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card card-active  being-dragged"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card with a card click url 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="http://example.com"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;

exports[`FileProperties OrgChart/Card with click handlers 1`] = `
<div
  style={
    Object {
      "height": "100px",
      "margin": "20px",
    }
  }
>
  <a
    className="card   clickable"
    href="#"
    onClick={[Function]}
    style={
      Object {
        "left": undefined,
        "position": "absolute",
        "top": undefined,
      }
    }
    tabIndex="0"
  >
    <img
      alt="Iain Stewart"
      className="card-avatar"
      name="user"
      src="1.jpg"
    />
    <div
      className="card-info"
    >
      <div
        aria-level={1}
        className="card-name"
        role="heading"
      >
        Iain Stewart
      </div>
      <div
        aria-level={2}
        className="card-title"
        role="heading"
      >
        President - NRC
      </div>
    </div>
    <div
      className="card-button"
    >
      <button
        aria-label={null}
        className="btn btn-secondary"
        icon="user"
        onClick={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        Test Iain Stewart's profile button
      </button>
    </div>
  </a>
</div>
`;
